k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: researchradar-svc
spec:
  selector:
    app: researchradar
  ports:
    - port: 80
      targetPort: 5000
