k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: researchradar-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: researchradar.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: researchradar-svc
                port:
                  number: 80
